--- a/1/index.html
+++ b/1/index.html
@@ -167,7 +167,7 @@
         </div>
     </div>
 
-    <h2>Additional Imagess</h2>
+    <h2>Additional Images</h2>
     <div class="image-wrapper">
         <div class="image-block">
             <img src="./media/chalice_aligned.jpg" alt="Aligned image of Chalice">
