--- a/1/index.html
+++ b/1/index.html
@@ -12,6 +12,7 @@
             margin: 0 auto;
             padding: 20px;
             line-height: 1.6;
+            background-color: #f0f0f0;
         }
 
         h1,
