--- a/3/index.html
+++ b/3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS 280A - Project 2: Fun with Frequencies | Alonso Martinez</title>
+    <title>CS 280A - Project 3: Face Morphing and Modelling a Photo Collection | Alonso Martinez</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +12,6 @@
             margin: 0 auto;
             padding: 20px;
             line-height: 1.6;
-            background-color: #f0f0f0;
         }
 
         .comparison-container {
@@ -725,12 +724,9 @@
     </div>
     <hr>
     <h2>Final thoughts</h2>
-    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that can arise from
-        simple signals interacting with eachother.
-        On a practical level I learned to be careful about how scaling the values of the images mattered a lot when the
-        range was negative vs positive, as well as being
-        very careful about when to use np.clip; sometimes it was critically necessary and other times it was throwing
-        away unwanted information. Throughout this project, I
+    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that can arise from simple signals interacting with eachother.
+        On a practical level I learned to be careful about how scaling the values of the images mattered a lot when the range was negative vs positive, as well as being
+        very careful about when to use np.clip; sometimes it was critically necessary and other times it was throwing away unwanted information. Throughout this project, I
         kept thinking, this is so cool, "Why isn't there a Photoshop clone / blend brush that leverages the human
         perceptual trick of focusing mostly on higher frequencies?!" </p>
     <footer>
