changed background back to white.

--- a/3/index.html
+++ b/3/index.html
@@ -724,9 +724,12 @@
     </div>
     <hr>
     <h2>Final thoughts</h2>
-    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that can arise from simple signals interacting with eachother.
-        On a practical level I learned to be careful about how scaling the values of the images mattered a lot when the range was negative vs positive, as well as being
-        very careful about when to use np.clip; sometimes it was critically necessary and other times it was throwing away unwanted information. Throughout this project, I
+    <p class='indented'> This project and the hands-on lectures revealed the incredible complexity that can arise from
+        simple signals interacting with eachother.
+        On a practical level I learned to be careful about how scaling the values of the images mattered a lot when the
+        range was negative vs positive, as well as being
+        very careful about when to use np.clip; sometimes it was critically necessary and other times it was throwing
+        away unwanted information. Throughout this project, I
         kept thinking, this is so cool, "Why isn't there a Photoshop clone / blend brush that leverages the human
         perceptual trick of focusing mostly on higher frequencies?!" </p>
     <footer>
