updating new page.

--- a/index.html
+++ b/index.html
@@ -147,22 +147,25 @@
     <!-- Projects Section -->
     <div class="projects">
         <a href="/1/index.html" class="project-card">
-            <div class="project-title">Aligning Images of the Russian Empire</div>
-            <img src="/mainpage_media/proj1.jpg" alt="Aligning Images" class="project-image">
-            <div class="project-description">Aligning RGB channels to recreate historic images with clarity.</div>
+            <div class="project-title">Aligning RGB Images</div>
+            <img src="/mainpage_media/proj1.jpg" alt="Aligning RGB Images" class="project-image">
+            <div class="project-description">Project 1: Aligning RGB channels to recreate historic images with clarity.
+            </div>
         </a>
 
         <a href="/2/index.html" class="project-card">
             <div class="project-title">Fun with Filters and Frequencies</div>
             <img src="/mainpage_media/proj2.jpg" alt="Fun with Filters" class="project-image">
-            <div class="project-description">Creating hybrid images that appear as one image from a distance and another
+            <div class="project-description">Project 2: Creating hybrid images that appear as one image from a distance
+                and another
                 up close.</div>
         </a>
 
         <a href="/3/index.html" class="project-card">
             <div class="project-title">Face Morphing and Modeling a Photo Collection</div>
             <img src="/mainpage_media/proj2.jpg" alt="Face Morphing" class="project-image">
-            <div class="project-description">Using facial landmarks to morph and blend faces across images.</div>
+            <div class="project-description">Project 3: Using facial landmarks to morph and blend faces across images.
+            </div>
         </a>
     </div>
 
