--- a/3/index.html
+++ b/3/index.html
@@ -418,16 +418,32 @@
             <img src="./media/old/05.jpg" alt="Edge Filter Sweep" width=150>
         </div>
     </div>
+    <p class='indented'> Here are some of the points of correspondance for the synthetic older dataset:
+    <div class="image-wrapper indent-level-1">
+        <div class="image-block">
+            <img src="./media/old1_topo.jpg" alt="Edge Filter Sweep" width=350>
+        </div>
+        <div class="image-block">
+            <img src="./media/old3_topo.jpg" alt="Edge Filter Sweep" width=350>
+        </div>
+    </div>
+    </p>
     <br>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
-            <img src="./media/alonso_old_midway.jpg" alt="Edge Filter Sweep" width=300>
-
+            <div class="image-item">
+                <div class="image-text">Original </div>
+                <img src="./media/alonso_small.jpg" alt="Gaussian blur sweep" width="450" class="pixelated">
+            </div>
+            <div class="image-item">
+                <div class="image-text">Halway morph with older dataset</div>
+                <img src="./media/alonso_old_midway.jpg" alt="Gaussian blur sweep" width="450" class="pixelated">
+            </div>
         </div>
     </div>
 
     <footer>
-        CS 280A - Project 2: Fun with Frequencies | Alonso Martinez
+        CS 280A - Intro to Computer Vision | Alonso Martinez
     </footer>
     <script>
         function setLabelsAndSize(containerId) {
