Formatting of text

--- a/3/index.html
+++ b/3/index.html
@@ -406,8 +406,7 @@
 
 
     <h2>Part 6 - Bells and Whistles</h2>
-    <p class='indented'> Using Google's Imagen, I created a small dataset of 5 images of older men, and then I morphed
-        my texture and geometry towards the mean face of the synthetic older dataset. Here is the result:
+    <p class='indented' style="text-align: center"> Using Googles Imagen, I created a small dataset of 5 images of older men:
     </p>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
@@ -418,7 +417,7 @@
             <img src="./media/old/05.jpg" alt="Edge Filter Sweep" width=150>
         </div>
     </div>
-    <p class='indented'> Here are some of the points of correspondance for the synthetic older dataset:
+    <p class='indented' style="text-align: center"> Like previously we found points of correspondance for the dataset:
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
             <img src="./media/old1_topo.jpg" alt="Edge Filter Sweep" width=350>
@@ -428,7 +427,8 @@
         </div>
     </div>
     </p>
-    <br>
+    <p class='indented' style="text-align: center"> I then morphed my texture and geometry towards the mean face of the synthetic older dataset. Here is the results:
+    </p>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
             <div class="image-item">
