--- a/3/index.html
+++ b/3/index.html
@@ -303,7 +303,7 @@
             </div>
 
             <div class="image-item">
-                <div class="image-text">Midaway face </div>
+                <div class="image-text">Midway face </div>
                 <img src="./media/alonso_gael_midway.jpg" alt="Gaussian blur sweep" width="350" class="pixelated">
             </div>
         </div>
@@ -406,7 +406,8 @@
 
 
     <h2>Part 6 - Bells and Whistles</h2>
-    <p class='indented' style="text-align: center"> Using Googles Imagen, I created a small dataset of 5 images of older men:
+    <p class='indented' style="text-align: center"> Using Googles Imagen, I created a small dataset of 5 images of older
+        men:
     </p>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
@@ -427,7 +428,8 @@
         </div>
     </div>
     </p>
-    <p class='indented' style="text-align: center"> I then morphed my texture and geometry towards the mean face of the synthetic older dataset. Here is the results:
+    <p class='indented' style="text-align: center"> I then morphed my texture and geometry towards the mean face of the
+        synthetic older dataset. Here is the results:
     </p>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
