Updating main page for Github (project aggregate)

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <a href="/3/index.html" class="project-card">
             <div class="project-title">Face Morphing and Modeling a Photo Collection</div>
-            <img src="/mainpage_media/proj2.jpg" alt="Face Morphing" class="project-image">
+            <img src="/mainpage_media/proj3.gif" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 3: Using facial landmarks to morph and blend faces across images.
             </div>
         </a>
