first pass at project 4A website

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
             <div class="project-description">Project 3: Using facial landmarks to morph and blend faces across images.
             </div>
         </a>
+
+        <a href="/4/index.html" class="project-card">
+            <div class="project-title">Face Morphing and Modeling a Photo Collection</div>
+            <img src="/mainpage_media/proj4.jpg" alt="Face Morphing" class="project-image">
+            <div class="project-description">Project 4A: Image rectification, Homographies, and Stitching Photo Mosaics.
+            </div>
+        </a>
     </div>
 
     <!-- Footer -->
