--- a/index.html
+++ b/index.html
@@ -169,9 +169,16 @@
         </a>
 
         <a href="/4/index.html" class="project-card">
-            <div class="project-title">Face Morphing and Modeling a Photo Collection</div>
+            <div class="project-title">Stitching image mosaics part 1</div>
             <img src="/mainpage_media/proj4.jpg" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 4A: Image rectification, Homographies, and Stitching Photo Mosaics.
+            </div>
+        </a>
+
+        <a href="/4/index.html" class="project-card">
+            <div class="project-title">Stitching image mosaics part 2</div>
+            <img src="/mainpage_media/proj4.jpg" alt="Face Morphing" class="project-image">
+            <div class="project-description">Project 4B: Feature Matching for Autostitching.
             </div>
         </a>
     </div>
