updating main site

--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
         <p class="tagline">Exploring the world of computer vision through <br>practical assignments by Alonso Martinez.
         </p>
         <!-- Profile Photo -->
-        <img src="/mainpage_media/alonso.jpg" alt="Alonso Martinez" class="profile-photo">
+        <img src="./mainpage_media/alonso.jpg" alt="Alonso Martinez" class="profile-photo">
     </header>
 
     <!-- Projects Section -->
     <div class="projects">
         <a href="/1/index.html" class="project-card">
             <div class="project-title">Aligning RGB Images</div>
-            <img src="/mainpage_media/proj1.jpg" alt="Aligning RGB Images" class="project-image">
+            <img src="./mainpage_media/proj1.jpg" alt="Aligning RGB Images" class="project-image">
             <div class="project-description">Project 1: Aligning RGB channels to recreate historic images with clarity.
             </div>
         </a>
 
         <a href="/2/index.html" class="project-card">
             <div class="project-title">Fun with Filters and Frequencies</div>
-            <img src="/mainpage_media/proj2.jpg" alt="Fun with Filters" class="project-image">
+            <img src="./mainpage_media/proj2.jpg" alt="Fun with Filters" class="project-image">
             <div class="project-description">Project 2: Creating hybrid images that appear as one image from a distance
                 and another
                 up close.</div>
@@ -163,21 +163,21 @@
 
         <a href="/3/index.html" class="project-card">
             <div class="project-title">Face Morphing and Modeling a Photo Collection</div>
-            <img src="/mainpage_media/proj3.gif" alt="Face Morphing" class="project-image">
+            <img src="./mainpage_media/proj3.gif" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 3: Using facial landmarks to morph and blend faces across images.
             </div>
         </a>
 
         <a href="/4/index.html" class="project-card">
             <div class="project-title">Stitching image mosaics part 1</div>
-            <img src="/mainpage_media/proj4.jpg" alt="Face Morphing" class="project-image">
+            <img src="./4/media/final_image.jpg" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 4A: Image rectification, Homographies, and Stitching Photo Mosaics.
             </div>
         </a>
 
         <a href="/4/index.html" class="project-card">
             <div class="project-title">Stitching image mosaics part 2</div>
-            <img src="/mainpage_media/proj4.jpg" alt="Face Morphing" class="project-image">
+            <img src="./4B/media/harris_patches_overlay.jpg" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 4B: Feature Matching for Autostitching.
             </div>
         </a>
