--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
         </a>
 
-        <a href="/4/index.html" class="project-card">
+        <a href="/4B/index.html" class="project-card">
             <div class="project-title">Stitching image mosaics part 2</div>
             <img src="./4B/media/harris_patches_overlay.jpg" alt="Face Morphing" class="project-image">
             <div class="project-description">Project 4B: Feature Matching for Autostitching.
